--- a/app/views/patients/_patient.html.haml
+++ b/app/views/patients/_patient.html.haml
@@ -1,6 +1,6 @@
 %tr
   %td{ :data => { :heading => "Name"}}
-    = link_to patient.full_name, clinical_summary_patient_path(patient), :title => "Clinical Summary"
+    = link_to patient.to_s(:last_first), clinical_summary_patient_path(patient), :title => "Clinical Summary"
   %td{ :data => { :heading => "NHS No."}}
     = patient.nhs_number
   %td{ :data => { :heading => "Hospital No."}}
