--- a/app/views/peritonitis_episodes/_form.html.haml
+++ b/app/views/peritonitis_episodes/_form.html.haml
@@ -12,15 +12,15 @@
 
         .large-4.columns
           = p.label :diagnosis_date
-          = p.date_select(:diagnosis_date, { start_year: (1.year.ago).year, end_year: Time.now.year + 1, order: [:day, :month, :year] }, class: "datetime")
+          = p.date_select(:diagnosis_date, { start_year: (1.year.ago).year, end_year: (1.year.since).year, order: [:day, :month, :year] }, class: "datetime")
 
         .large-4.columns
           = p.label :treatment_start_date
-          = p.date_select(:treatment_start_date, { start_year: (1.year.ago).year, end_year: Time.now.year + 1, order: [:day, :month, :year] }, class: "datetime")
+          = p.date_select(:treatment_start_date, { start_year: (1.year.ago).year, end_year: (1.year.since).year, order: [:day, :month, :year] }, class: "datetime")
 
         .large-4.columns
           = p.label :treatment_end_date
-          = p.date_select(:treatment_end_date, { start_year: (1.year.ago).year, end_year: Time.now.year + 1, order: [:day, :month, :year], include_blank: true }, class: "datetime")
+          = p.date_select(:treatment_end_date, { start_year: (1.year.ago).year, end_year: (1.year.since).year, order: [:day, :month, :year], include_blank: true }, class: "datetime")
 
     .row
       .large-12.columns
