--- a/app/views/patients/_exit_site_table.html.haml
+++ b/app/views/patients/_exit_site_table.html.haml
@@ -24,21 +24,21 @@
           = e.diagnosis_date
 
         %td{ :data => { :heading => "Outcome" }, valign: "top" }
-          = default_for_blank(e.outcome, nil)
+          = e.outcome
 
         %td{ :data => { :heading => "Organisms" }, valign: "top" }
           %ul.table-data-list
             = organisms(e.infection_organisms)
 
         %td{:data => { :heading => "Treatment" }, valign: "top" }
-          = default_for_blank(e.treatment, nil)
+          = e.treatment
 
         %td{ :data => { :heading => "Antibiotics" }, valign: "top" }
           %ul.table-data-list
             = medication_and_route(e.medications)
 
         %td{ :data => { :heading => "Notes" }, valign: "top" }
-          = default_for_blank(e.notes, nil)
+          = e.notes
 
         %td{ :data => { :heading => "Last Updated" }, valign: "top" }
           = e.updated_at
