Added ability to keep medication form open when a validation error occurs.

--- a/app/assets/stylesheets/renalware/toggle.css.scss
+++ b/app/assets/stylesheets/renalware/toggle.css.scss
@@ -10,6 +10,14 @@
 
 }
 
+.hide-button {
+  display: none;
+}
+
+.show-form {
+  display: block;
+}
+
 #new-form:target {
   .hide {
     display: block;
