Removed old 'add new medication' button and user limit, moved validation errors in to partial.

--- a/app/views/medications/_edit.html.haml
+++ b/app/views/medications/_edit.html.haml
@@ -15,10 +15,7 @@
           Edit this medication
 
         .large-12.columns
-          %ul.error-messages
-            - if pm.object.errors.any?
-              - pm.object.errors.messages.each do |field, msg|
-                %li= msg.join(",")
+          = render partial: 'shared/error_messages', locals: { pm: pm }
 
         .row
           = render partial: 'medications/fields', locals: { pm: pm }
