--- a/app/views/patients/manage_medications.html.haml
+++ b/app/views/patients/manage_medications.html.haml
@@ -18,10 +18,9 @@
       #medications
         = render partial: 'medications/new', locals: { pm: pm } if pm.object.new_record?
 
-    .large-12.columns
-      = f.link_to_add 'Add a new medication', :medications, class: 'add-medication button tiny'
-
     - unless current_user.read_only?
-      = f.submit 'Save Medication', class: 'button tiny right save mt'
-      = link_to 'Cancel', clinical_summary_patient_path(@patient), class: 'button tiny left cancel mt'
+      .large-12.columns
+        = f.link_to_add 'Add a new medication', :medications, class: 'add-medication button tiny right mt'
+        = f.submit 'Save Medication', class: 'button tiny right save mt'
+        = link_to 'Cancel', clinical_summary_patient_path(@patient), class: 'button tiny left cancel mt'
 
