--- a/app/assets/stylesheets/renalware/errors.css.scss
+++ b/app/assets/stylesheets/renalware/errors.css.scss
@@ -1,3 +1,7 @@
+#new-form input.field_with_errors {
+    border: 1px solid red;
+}
+
 .field_with_errors {
   input,select,textarea {
     border: 1px solid red;
@@ -7,3 +11,4 @@
 ul.error-messages {
   color: red;
 }
+
