--- a/app/views/doctors/_doctor.html.haml
+++ b/app/views/doctors/_doctor.html.haml
@@ -6,7 +6,7 @@
   %td
     = doctor.email
   %td
-    = address_or_practices(doctor)
+    = practices_or_address(doctor)
   %td
     = link_to 'Edit', edit_doctor_path(doctor), class: 'button tiny'
     = link_to 'Delete', doctor_path(doctor), method: :delete, class: 'button tiny cancel'
