Add manage doctors nav item

--- a/app/views/navigation/_renalware_admin.html.haml
+++ b/app/views/navigation/_renalware_admin.html.haml
@@ -11,6 +11,8 @@
           = link_to "Manage Modalities", modality_codes_path
         %li
           = link_to "Manage Bag Types", bag_types_path
+        %li
+          = link_to "Manage Doctors", doctors_path
 
       - if current_user_is_admin?
         %li
