--- a/app/views/medications/_fields.html.haml
+++ b/app/views/medications/_fields.html.haml
@@ -28,7 +28,7 @@
     / Search all drugs
     .standard
       = label_tag :drug_search, "Drug"
-      = text_field_tag :drug_search, display_med_field(pm.object, pm.object.medicatable, :name), :class => "find_drug #{ highlight_validation_fail(pm.object, :medicatable_id) }", :placeholder => "Search drug by name or type"
+      = text_field_tag :drug_search, medicatable_name(pm.object), :class => "find_drug #{ highlight_validation_fail(pm.object, :medicatable_id) }", :placeholder => "Search drug by name or type"
 
       %ul.drug-results.no-bullet
 
