--- a/app/views/patients/manage_medications.html.haml
+++ b/app/views/patients/manage_medications.html.haml
@@ -10,6 +10,7 @@
 
     = hidden_field_tag :redirect_url, manage_medications_patient_path(@patient)
     = hidden_field_tag :template, "manage_medications"
+    = hidden_field_tag :message, "You have successfully updated a patient's medications."
 
     = f.fields_for :medications do |pm|
 
