--- a/app/views/medications/_new.html.haml
+++ b/app/views/medications/_new.html.haml
@@ -10,5 +10,4 @@
         = render partial: 'shared/error_messages', locals: { pm: pm }
 
         .row
-          = render partial: 'medications/fields', locals: { pm: pm }
-
+          = render partial: 'medications/form', locals: { pm: pm }
