--- a/app/views/peritonitis_episodes/_new_medication.html.haml
+++ b/app/views/peritonitis_episodes/_new_medication.html.haml
@@ -12,4 +12,4 @@
 
       .row
 
-        = render partial: 'medications/fields', locals: { pm: pm }
+        = render partial: 'medications/form', locals: { pm: pm }
