--- a/app/views/peritonitis_episodes/_recorded_medications.html.haml
+++ b/app/views/peritonitis_episodes/_recorded_medications.html.haml
@@ -10,7 +10,7 @@
 
     .columns.large-6.meds-form.content{:id => "edit-meds-#{pm.object.id}", data: { index: 0 }}
 
-      = render partial: 'medications/fields', locals: { pm: pm }
+      = render partial: 'medications/form', locals: { pm: pm }
 
       .med-form.content{id: "edit-meds-#{pm.object.id}"}
         = pm.check_box :_destroy
