Removed unused css class.

--- a/app/views/medications/_new.html.haml
+++ b/app/views/medications/_new.html.haml
@@ -5,7 +5,7 @@
         Add a new medication
 
       .large-12.columns
-        = pm.link_to_remove "Remove this medication", class: "button cancel tiny right remove-bag hide"
+        = pm.link_to_remove "Remove this medication", class: "button cancel tiny right hide"
 
         = render partial: 'shared/error_messages', locals: { pm: pm }
 
