Used nested_form helpers for edit/new peritonitis episodes form builders.

--- a/app/views/peritonitis_episodes/edit.html.haml
+++ b/app/views/peritonitis_episodes/edit.html.haml
@@ -10,7 +10,7 @@
 
 .row
   .large-12.columns
-    = form_for [@patient, @peritonitis_episode], :method => :put do |p|
+    = nested_form_for [@patient, @peritonitis_episode], :method => :put do |p|
 
       = field_set_tag do
         .row
