--- a/app/views/peritonitis_episodes/new.html.haml
+++ b/app/views/peritonitis_episodes/new.html.haml
@@ -14,11 +14,11 @@
   %ul.no-bullet
     = field_set_tag do
 
-      = form_for [@patient, @peritonitis_episode] do |p|
+      = nested_form_for [@patient, @peritonitis_episode] do |p|
 
         .row
           = render :partial => 'peritonitis_episodes/form', :locals => { :p => p }
 
-        = link_to "Cancel", pd_info_patient_path(@patient), class: "button tiny left cancel mt"
-
-        = p.submit "Save Peritonitis Episode", :class => "button tiny right save mt"
+        .large-12.columns
+          = link_to "Cancel", pd_info_patient_path(@patient), class: "button tiny left cancel mt"
+          = p.submit "Save Peritonitis Episode", :class => "button tiny right save mt"
