--- a/app/views/peritonitis_episodes/_organism_forms.html.haml
+++ b/app/views/peritonitis_episodes/_organism_forms.html.haml
@@ -1,10 +1,8 @@
-= p.fields_for :infection_organisms, @peritonitis_episode.infection_organisms do |io|
+= render :partial => 'peritonitis_episodes/recorded_organisms', :locals => { :io => io } unless io.object.new_record?
 
-  - if io.object.new_record?
+#infection-organisms
+  = render :partial => 'peritonitis_episodes/new_organism', :locals => { :io => io } if io.object.new_record?
 
-    = render :partial => 'peritonitis_episodes/new_organism', :locals => { :io => io }
 
-  - else
 
-    = render :partial => 'peritonitis_episodes/recorded_organisms', :locals => { :io => io }
 
