--- a/app/views/shared/_error_messages.html.haml
+++ b/app/views/shared/_error_messages.html.haml
@@ -1,4 +1,4 @@
 %ul.error-messages
-  - if pm.object.errors.any?
-    - pm.object.errors.messages.each do |field, msg|
-      %li= msg.join(",")
+  - if object.errors.any?
+    - object.errors.messages.each do |field, msgs|
+      %li= msgs.join(",")
