--- a/app/views/medications/_new.html.haml
+++ b/app/views/medications/_new.html.haml
@@ -5,9 +5,10 @@
         Add a new medication
 
       .large-12.columns
-        = pm.link_to_remove "Remove this medication", class: "button cancel tiny right hide"
+        .row
+          = pm.link_to_remove "Remove this medication", class: "button cancel tiny right hide"
 
-        = render partial: 'shared/error_messages', locals: { pm: pm }
+        = render partial: 'shared/error_messages', locals: { object: pm.object }
 
         .row
           = render partial: 'medications/form', locals: { pm: pm }
