--- a/app/views/peritonitis_episodes/_new_organism.html.haml
+++ b/app/views/peritonitis_episodes/_new_organism.html.haml
@@ -8,10 +8,7 @@
         .row
           = io.link_to_remove "Remove this organism/sensitivity", class: "button cancel tiny right hide"
 
-        %ul.error-messages
-          - if io.object.errors.any?
-            - io.object.errors.messages.each do |field, msg|
-              %li= msg.join(",")
+        = render partial: 'shared/error_messages', locals: { object: io.object }
 
         .row
           = render :partial => 'infection_organisms/organism_fields', :locals => { :io => io }
