--- a/app/views/exit_site_infections/_medication_forms.html.haml
+++ b/app/views/exit_site_infections/_medication_forms.html.haml
@@ -1,4 +1,4 @@
-= e.fields_for :medications, @exit_site_infection.medications do |pm|
+= es.fields_for :medications, @exit_site_infection.medications do |pm|
 
   - if pm.object.new_record?
 
