--- a/app/views/exit_site_infections/new.html.haml
+++ b/app/views/exit_site_infections/new.html.haml
@@ -14,11 +14,11 @@
   %ul.no-bullet
     = field_set_tag do
 
-      = form_for [@patient, @exit_site_infection] do |e|
+      = nested_form_for [@patient, @exit_site_infection] do |es|
 
         .row
-          = render :partial => 'exit_site_infections/form', :locals => { :e => e }
+          = render :partial => 'exit_site_infections/form', :locals => { :es => es }
 
-        = link_to "Cancel", pd_info_patient_path(@patient), class: "button tiny left cancel mt"
-
-        = e.submit "Save Exit Site Infection", :class => "button tiny right save mt"
+        .large-12.columns
+          = link_to "Cancel", pd_info_patient_path(@patient), class: "button tiny left cancel mt"
+          = es.submit "Save Exit Site Infection", :class => "button tiny right save mt"
