--- a/app/views/peritonitis_episodes/_medication_forms.html.haml
+++ b/app/views/peritonitis_episodes/_medication_forms.html.haml
@@ -1,4 +1,4 @@
-= p.fields_for :medications, @peritonitis_episode.medications do |pm|
+= pe.fields_for :medications, @peritonitis_episode.medications do |pm|
 
   - if pm.object.new_record?
 
