Moved peritonitis partials to use main medication partials.

--- a/app/views/peritonitis_episodes/_medication_forms.html.haml
+++ b/app/views/peritonitis_episodes/_medication_forms.html.haml
@@ -2,7 +2,7 @@
 
   - if pm.object.new_record?
 
-    = render :partial => 'peritonitis_episodes/new_medication', :locals => { :pm => pm }
+    = render :partial => 'medications/new', :locals => { :pm => pm }
 
   - else
 
