--- a/app/views/peritonitis_episodes/_form.html.haml
+++ b/app/views/peritonitis_episodes/_form.html.haml
@@ -103,4 +103,12 @@
         .section-underliner
           Medications administered for this peritonitis episode:
 
-        = render :partial => 'peritonitis_episodes/medication_forms', :locals => { :pe => pe }
+        = pe.fields_for :medications do |pm|
+
+          = render :partial => 'medications/medication', :locals => { :pm => pm } unless pm.object.new_record?
+
+          #medications
+            = render partial: 'medications/new', locals: { pm: pm } if pm.object.new_record?
+
+        .large-12.columns
+          = pe.link_to_add 'Add a new medication', :medications, class: 'add-medication button tiny right mt'
