--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -16,12 +16,7 @@
 
     = render partial: 'navigation/main'
 
-    - flash.each do |name, msg|
-      - if flash[name]
-        .row{class: "flash-#{name}"}
-          .alert-box.info.round{:data => {:alert => nil}}
-            = msg
-            <a href="#" class="close">&times;</a>
+    = render partial: 'shared/flash_messages'
 
     .main-content
 
