--- a/app/views/letters/_letter.html.haml
+++ b/app/views/letters/_letter.html.haml
@@ -1,6 +1,6 @@
 %tr
   %td
-    = letter.author.full_name
+    = author_view?(letter) ? letter.patient.full_name : letter.author.full_name
   %td
     = letter.letter_description.text
   %td
@@ -8,5 +8,5 @@
   %td
     = letter.updated_at
   %td
-    = link_to 'Edit', edit_patient_letter_path(patient_id: @patient.to_param, id: letter.to_param), class: 'button tiny'
-    = link_to 'Delete', patient_letter_path(patient_id: @patient.to_param, id: letter.to_param), method: :delete, class: 'button tiny cancel'
+    = link_to 'Edit', edit_patient_letter_path(patient_id: letter.patient.to_param, id: letter.to_param), class: 'button tiny'
+    = link_to 'Delete', patient_letter_path(patient_id: letter.patient.to_param, id: letter.to_param), method: :delete, class: 'button tiny cancel'
