--- a/app/views/exit_site_infections/_form.html.haml
+++ b/app/views/exit_site_infections/_form.html.haml
@@ -46,6 +46,9 @@
 
     = render :partial => 'exit_site_infections/medication_forms', :locals => { :es => es }
 
+    .large-12.columns
+      = es.link_to_add 'Add a new medication', :medications, model_object: Medication.exit_site, class: 'add-medication button tiny right mt'
+
 .row
   .large-12.columns
     .section-underliner
