--- a/app/views/peritonitis_episodes/_medication_forms.html.haml
+++ b/app/views/peritonitis_episodes/_medication_forms.html.haml
@@ -1,9 +1,6 @@
-= pe.fields_for :medications, @peritonitis_episode.medications do |pm|
+= pe.fields_for :medications do |pm|
 
-  - if pm.object.new_record?
+  = render :partial => 'medications/medication', :locals => { :pm => pm } unless pm.object.new_record?
 
-    = render :partial => 'medications/new', :locals => { :pm => pm }
-
-  - else
-
-    = render :partial => 'peritonitis_episodes/recorded_medications', :locals => { :pm => pm }
+  #medications
+    = render partial: 'medications/new', locals: { pm: pm } if pm.object.new_record?
