Refactored similar partials for managing edit/new medications to become one partial, used by both peritonitis and exit site.

--- a/app/views/medications/_medication_forms.html.haml
+++ b/app/views/medications/_medication_forms.html.haml
@@ -1,4 +1,4 @@
-= es.fields_for :medications do |pm|
+= object.fields_for :medications do |pm|
 
   = render :partial => 'medications/medication', :locals => { :pm => pm } unless pm.object.new_record?
 
