--- a/app/views/exit_site_infections/_form.html.haml
+++ b/app/views/exit_site_infections/_form.html.haml
@@ -44,7 +44,7 @@
     .section-underliner
       Medications administered for this exit site infection:
 
-    = render :partial => 'exit_site_infections/medication_forms', :locals => { :es => es }
+    = render :partial => 'medications/medication_forms', :locals => { object: es }
 
     .large-12.columns
       = es.link_to_add 'Add a new medication', :medications, model_object: Medication.exit_site, class: 'add-medication button tiny right mt'
